[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/sprites/tilemap_packed.png" type="Texture" id=1]
[ext_resource path="res://assets/player/player.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 96, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 80, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 96, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 16, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 32, 64, 16, 16 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "jumping",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "walking",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "shooting",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=8]
radius = 4.1518
height = 7.6964

[sub_resource type="CapsuleShape2D" id=9]
radius = 4.96016
height = 7.28364

[node name="player" type="KinematicBody2D"]
scale = Vector2( 5, 5 )
z_index = 13
script = ExtResource( 2 )

[node name="sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 7 )
animation = "walking"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 8 )

[node name="flare" type="Sprite" parent="."]
visible = false
position = Vector2( 14.0127, 3.01462 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 48, 64, 16, 16 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 9 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 200, -100 )
current = true
smoothing_enabled = true

[node name="shootAnim" type="Timer" parent="."]
wait_time = 0.7

[node name="speed" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="shootAnim" to="." method="_on_shootAnim_timeout"]
[connection signal="timeout" from="speed" to="." method="_on_speed_timeout"]
